--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
+  "simple-git-hooks": {
+    "pre-commit": "npx pretty-quick --staged"
+  },
   "dependencies": {
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
@@ -42,6 +45,8 @@
     "jsdom": "^26.1.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
+    "pretty-quick": "^4.2.2",
+    "simple-git-hooks": "^2.13.1",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
