--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,16 +10,21 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     container:
-      image: node:20
+      image: node:24
     steps:
-      - uses: actions/checkout@v3
-        with:
-          node-version: 20
+      - uses: actions/checkout@v5
       - run: npm ci
       - run: npm run build
-      - name: Get SSH Key and set permissions
+      - shell: bash
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        name: Get SSH Key and set permissions
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
-      - name: Deploy using scp
-        run: scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -r ./dist/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/portfolio-site
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+      - shell: bash
+        env:
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+        name: Deploy using scp
+        run: scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -r ./dist/* "$SSH_USER"@"$SSH_HOST":~/portfolio-site
