Update deploy.yml to add secrets environment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build-and-deploy:
+    environment: aws
     runs-on: ubuntu-latest
     container:
       image: node:24
@@ -17,14 +18,14 @@ jobs:
       - run: npm run build
       - shell: bash
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY-aws }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         name: Get SSH Key and set permissions
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
       - shell: bash
         env:
-          SSH_USER: ${{ secrets.SSH_USER-aws }}
-          SSH_HOST: ${{ secrets.SSH_HOST-aws }}
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
         name: Deploy using scp
         run: scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -r ./dist/* "$SSH_USER"@"$SSH_HOST":~/portfolio-site
